src/objects/Device_Usage__c.object
<CustomObject>
    <fields>
        <fullName>Device_OS__c</fullName>
        <label>Device OS</label>
        <picklist>
            <picklistValues>
                <fullName>iOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Berry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Device_Usage</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IMEI__c</fullName>
        <label>IMEI</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>User</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipName>Device_Usage</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>BLN Device Usage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Device Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Device Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>